// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate mutation files 1`] = `
Object {
  "add": "// @flow
import {
  GraphQLString,
  GraphQLNonNull,
} from 'graphql';
import {
  mutationWithClientMutationId,
  toGlobalId,
} from 'graphql-relay';

import ExampleModel from '../ExampleModel';

import ExampleLoader from '../ExampleLoader';
import ExampleConnection from '../ExampleConnection';

export default mutationWithClientMutationId({
  name: 'ExampleAdd',
  inputFields: {
    example: {
      type: new GraphQLNonNull(GraphQLString),
      description: 'My example field',
    },
  },
  mutateAndGetPayload: async ({ example }, { user }) => {
    // Verify if user is authorized
    if (!user) {
      throw new Error('Unauthorized user');
    }

    // TODO: mutation logic

    return {
      // id: id, // ID of the newly created row
      error: null,
    };
  },
  outputFields: {
    exampleEdge: {
      type: ExampleConnection.edgeType,
      resolve: async ({ id }, args, context) => {
        // Load new edge from loader
        const example = await ExampleLoader.load(
          context, id,
        );

        // Returns null if no node was loaded
        if (!example) {
          return null;
        }

        return {
          cursor: toGlobalId('Example', example),
          node: example,
        };
      },
    },
    error: {
      type: GraphQLString,
      resolve: ({ error }) => error,
    },
  },
});
",
  "addTest": "import { graphql } from 'graphql';
import { schema } from '../../schema';
import {
  getContext,
  connectMongoose,
  clearDbAndRestartCounters,
  disconnectMongoose,
} from '../../../test/helper';

import { User } from '.';
import Example from './Example';

beforeAll(connectMongoose);

beforeEach(clearDbAndRestartCounters);

afterAll(disconnectMongoose);

it('should not allow anonymous user', async () => {
  //language=GraphQL
  const query = \`
    mutation M($example: String) {
      ExampleAdd(input: {
        example: $example
      }) {
        exampleFieldToRetrieve
      }
    }
  \`;

  const variables = {
  };
  const rootValue = {};
  const context = getContext();

  const result = await graphql(schema, query, rootValue, context, variables);

  expect(result).toMatchSnapshot();
});

it('should create a record on database', async () => {
  const user = new User({
    name: 'user',
    email: 'user@example.com',
  });

  await user.save();

  //language=GraphQL
  const query = \`
    mutation M($example: String) {
      ExampleAdd(input: {
        example: $example
      }) {
        exampleFieldToRetrieve
      }
    }
  \`;

  const variables = {
  };
  const rootValue = {};
  const context = getContext({ user });

  const result = await graphql(schema, query, rootValue, context, variables);

  expect(result).toMatchSnapshot();
});
",
  "edit": "// @flow
import {
  GraphQLID,
  GraphQLString,
  GraphQLNonNull,
} from 'graphql';
import {
  mutationWithClientMutationId,
  fromGlobalId,
} from 'graphql-relay';

import ExampleModel from '../ExampleModel';

import ExampleType from '../ExampleType';
import ExampleLoader from './ExampleLoader';

export default mutationWithClientMutationId({
  name: 'ExampleEdit',
  inputFields: {
    id: {
      type: new GraphQLNonNull(GraphQLID),
    },
    example: {
      type: GraphQLString,
    },
  },
  mutateAndGetPayload: async (args, context) => {
    const { user } = context;

    // Verify if user is authorized
    if (!user) {
      throw new Error('Unauthorized user');
    }

    const {
      id,
      example,
    } = args;

    // Check if the provided ID is valid
    const example = await ExampleModel.findOne({
      _id: fromGlobalId(id).id,
    });

    // If not, throw an error
    if (!example) {
      throw new Error('Invalid exampleId');
    }

    // TODO: mutation logic

    // Clear dataloader cache
    ExampleLoader.clearCache(context, example._id);

    return {
      id: example._id,
      error: null,
    };
  },
  outputFields: {
    example: {
      type: ExampleType,
      resolve: (obj, args, context) => ExampleLoader.load(context, obj.id),
    },
    error: {
      type: GraphQLString,
      resolve: ({ error }) => error,
    },
  },
});
",
  "editTest": "import { graphql } from 'graphql';
import { toGlobalId } from 'graphql-relay';
import { schema } from '../../schema';
import {
  getContext,
  connectMongoose,
  clearDbAndRestartCounters,
  disconnectMongoose,
} from '../../../test/helper';

import User from './User';
import Example from './Example';

beforeAll(connectMongoose);

beforeEach(clearDbAndRestartCounters);

afterAll(disconnectMongoose);

it('should not allow anonymous user', async () => {
  //language=GraphQL
  const query = \`
    mutation M {
      ExampleEdit(input: {
        id: \\"Example Id\\"
        exampleField: \\"Example field\\"
      }) {
        exampleFieldToRetrieve
      }
    }
  \`;

  const variables = {
  };
  const rootValue = {};
  const context = getContext();

  const result = await graphql(schema, query, rootValue, context, variables);

  expect(result).toMatchSnapshot();
});

it('should create a record on database', async () => {
  const user = new User({
    name: 'user',
    email: 'user@example.com',
  });

  await user.save();

  //language=GraphQL
  const query = \`
    mutation M {
      ExampleEdit(input: {
        id: \\"Example Id\\"
        exampleField: \\"Example field\\"
      }) {
        exampleFieldToRetrieve
      }
    }
  \`;

  const variables = {
  };
  const rootValue = {};
  const context = getContext({ user });

  const result = await graphql(schema, query, rootValue, context, variables);

  expect(result).toMatchSnapshot();
});
",
}
`;

exports[`generate mutation files with schema 1`] = `
Object {
  "add": "// @flow
import {
  GraphQLString,
  GraphQLID,
  GraphQLList,
  GraphQLNonNull,
} from 'graphql';
import {
  mutationWithClientMutationId,
  toGlobalId,
} from 'graphql-relay';

import PostModel from '../PostModel';

import PostLoader from '../PostLoader';
import PostConnection from '../PostConnection';

export default mutationWithClientMutationId({
  name: 'PostAdd',
  inputFields: {
    title: {
      type: GraphQLNonNull(GraphQLString),
    },
    user: {
      type: GraphQLNonNull(GraphQLID),
    },
    slug: {
      type: GraphQLString,
    },
    tags: {
      type: GraphQLList(GraphQLString),
    },
    oldSlugs: {
      type: GraphQLList(GraphQLString),
    },
    comments: {
      type: GraphQLList(GraphQLID),
    },
    externalComments: {
      type: GraphQLList(GraphQLID),
    },
  },
  mutateAndGetPayload: async (args, { user }) => {
    // Verify if user is authorized
    if (!user) {
      throw new Error('Unauthorized user');
    }

    const {
      title,
      user,
      slug,
      tags,
      oldSlugs,
      comments,
      externalComments,
    } = args;

    // Create new record
    const post = await new PostModel({
      title,
      user,
      slug,
      tags,
      oldSlugs,
      comments,
      externalComments,
    }).save();

    // TODO: mutation logic

    return {
      id: post._id,
      error: null,
    };
  },
  outputFields: {
    postEdge: {
      type: PostConnection.edgeType,
      resolve: async ({ id }, args, context) => {
        // Load new edge from loader
        const post = await PostLoader.load(
          context, id,
        );

        // Returns null if no node was loaded
        if (!post) {
          return null;
        }

        return {
          cursor: toGlobalId('Post', post),
          node: post,
        };
      },
    },
    error: {
      type: GraphQLString,
      resolve: ({ error }) => error,
    },
  },
});
",
  "addTest": "import { graphql } from 'graphql';
import { schema } from '../../schema';
import {
  getContext,
  connectMongoose,
  clearDbAndRestartCounters,
  disconnectMongoose,
} from '../../../test/helper';

import User from './User';
import Post from './Post';

beforeAll(connectMongoose);

beforeEach(clearDbAndRestartCounters);

afterAll(disconnectMongoose);

it('should not allow anonymous user', async () => {
  //language=GraphQL
  const query = \`
    mutation M {
      PostAdd(input: {
        title: \\"Example value\\"
        user: \\"Example value\\"
        slug: \\"Example value\\"
        tags: \\"Example value\\"
        oldSlugs: \\"Example value\\"
        comments: \\"Example value\\"
        externalComments: \\"Example value\\"
      }) {
        postEdge {
          node {
            title
            user
            slug
            tags
            oldSlugs
            comments
            externalComments
          }
        }
      }
    }
  \`;

  const variables = {
  };
  const rootValue = {};
  const context = getContext();

  const result = await graphql(schema, query, rootValue, context, variables);

  expect(result).toMatchSnapshot();
});

it('should create a record on database', async () => {
  const user = new User({
    name: 'user',
    email: 'user@example.com',
  });

  await user.save();

  //language=GraphQL
  const query = \`
    mutation M {
      PostAdd(input: {
        title: \\"Example value\\"
        user: \\"Example value\\"
        slug: \\"Example value\\"
        tags: \\"Example value\\"
        oldSlugs: \\"Example value\\"
        comments: \\"Example value\\"
        externalComments: \\"Example value\\"
      }) {
        postEdge {
          node {
            title
            user
            slug
            tags
            oldSlugs
            comments
            externalComments
          }
        }
      }
    }
  \`;

  const variables = {
  };
  const rootValue = {};
  const context = getContext({ user });

  const result = await graphql(schema, query, rootValue, context, variables);

  expect(result).toMatchSnapshot();
});
",
  "edit": "// @flow
import {
  GraphQLString,
  GraphQLNonNull,
  GraphQLID,
  GraphQLList,
} from 'graphql';
import {
  mutationWithClientMutationId,
  fromGlobalId,
} from 'graphql-relay';

import PostModel from '../PostModel';

import PostType from '../PostType';
import PostLoader from '../PostLoader';

export default mutationWithClientMutationId({
  name: 'PostEdit',
  inputFields: {
    id: {
      type: new GraphQLNonNull(GraphQLID),
    },
    title: {
      type: GraphQLNonNull(GraphQLString),
    },
    user: {
      type: GraphQLNonNull(GraphQLID),
    },
    slug: {
      type: GraphQLString,
    },
    tags: {
      type: GraphQLList(GraphQLString),
    },
    oldSlugs: {
      type: GraphQLList(GraphQLString),
    },
    comments: {
      type: GraphQLList(GraphQLID),
    },
    externalComments: {
      type: GraphQLList(GraphQLID),
    },
  },
  mutateAndGetPayload: async (args, context) => {
    const { user } = context;

    // Verify if user is authorized
    if (!user) {
      throw new Error('Unauthorized user');
    }

    const {
      id,
      title,
      user,
      slug,
      tags,
      oldSlugs,
      comments,
      externalComments,
    } = args;

    // Check if the provided ID is valid
    const post = await PostModel.findOne({
      _id: fromGlobalId(id).id,
    });

    // If not, throw an error
    if (!post) {
      throw new Error('Invalid postId');
    }

    // Edit record
    await post.update({
      title,
      user,
      slug,
      tags,
      oldSlugs,
      comments,
      externalComments,
    });

    // TODO: mutation logic

    // Clear dataloader cache
    PostLoader.clearCache(context, post._id);

    return {
      id: post._id,
      error: null,
    };
  },
  outputFields: {
    post: {
      type: PostType,
      resolve: (obj, args, context) => PostLoader.load(context, obj.id),
    },
    error: {
      type: GraphQLString,
      resolve: ({ error }) => error,
    },
  },
});
",
  "editTest": "import { graphql } from 'graphql';
import { toGlobalId } from 'graphql-relay';
import { schema } from '../../schema';
import {
  getContext,
  connectMongoose,
  clearDbAndRestartCounters,
  disconnectMongoose,
} from '../../../test/helper';

import User from './User';
import Post from './Post';

beforeAll(connectMongoose);

beforeEach(clearDbAndRestartCounters);

afterAll(disconnectMongoose);

it('should not allow anonymous user', async () => {
  // TODO: specify fields to create a new Post
  const post = new Post({
    title: 'Example value',
    user: 'Example value',
    slug: 'Example value',
    tags: 'Example value',
    oldSlugs: 'Example value',
    comments: 'Example value',
    externalComments: 'Example value',
  });

  await post.save();

  const postId = toGlobalId('Post', post._id);

  //language=GraphQL
  const query = \`
    mutation M {
      PostEdit(input: {
        id: \\"\${postId}\\"
        example: \\"Example Field to Update\\"
      }) {
        post {
          title
          user
          slug
          tags
          oldSlugs
          comments
          externalComments
        }
      }
    }
  \`;

  const variables = {};
  const rootValue = {};
  const context = getContext();

  const result = await graphql(schema, query, rootValue, context, variables);

  expect(result).toMatchSnapshot();
});

it('should edit a record on database', async () => {
  const user = new User({
    name: 'user',
    email: 'user@example.com',
  });

  await user.save();

  // TODO: specify fields to create a new Post
  const post = new Post({
    title: 'Example value',
    user: 'Example value',
    slug: 'Example value',
    tags: 'Example value',
    oldSlugs: 'Example value',
    comments: 'Example value',
    externalComments: 'Example value',
  });

  await post.save();

  const postId = toGlobalId('Post', post._id);

  //language=GraphQL
  const query = \`
    mutation M {
      PostEdit(input: {
        id: \\"\${postId}\\"
        example: \\"Example Field to Update\\"
      }) {
        post {
          title
          user
          slug
          tags
          oldSlugs
          comments
          externalComments
        }
      }
    }
  \`;

  const variables = {
  };
  const rootValue = {};
  const context = getContext({ user });

  const result = await graphql(schema, query, rootValue, context, variables);

  expect(result).toMatchSnapshot();
});
",
}
`;
